<resources>
    <string name="app_name">CalculoMator</string>
    <string name="button_play">Play</string>
    <string name="textView_choosegamemode">Choose a Gamemode</string>
    <string name="button_classic">CLASSIC</string>
    <string name="button_chrono">CHRONO</string>
    <string name="button_infinite">INFINITE</string>
    <string name="button_scores">SCORES</string>
    <string name="textView_Brain">Train your brain with different game modes based on mental calculation</string>
    <string name="message_valeur_trop_grande"> Value too high</string>
    <string name="valeur_correcte"> That\'s true !</string>
    <string name="valeur_incorrecte"> That\'s wrong :(</string>
    <string name="view_score"> Score : %1$d</string>
    <string name="view_errors"> Errors remaining : %1$d </string>
    <string name="result"> Result </string>
    <string name="time"> Time Elapsed ! </string>
    <string name="textView_Devs">Developed by :</string>
    <string name="textView_LanguageAvailable">Languages available :</string>
    <string name="Score_Saved">Score Saved !</string>
    <string name="Error_Saved">Error when saving !</string>
    <string name="nodata">No data</string>
    <string name="points">Points</string>
    <string name="classic">Classic</string>
    <string name="chrono">Chrono</string>
    <string name="infinite">Infinite</string>
    <string name="functions">Functions :</string>
    <string name="blablafunctions">We have added 2 game modes in addition to the classic mode which contains a descending timer. The infinite mode is a game mode that never ends. The timed mode is a game mode that ends after a certain time. We have integrated a list to visualize the database with the scores of the players.</string>
    <string name="end">End</string>
    <string name="save">Save</string>
    <string name ="urname">Your name</string>
</resources>